Fix horizontal scrolling in code samples.

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -77,8 +77,7 @@ samp {
 
 pre {
   white-space: pre;
-  white-space: pre-wrap;
-  word-wrap: break-word;
+  word-wrap: normal;
 }
 
 q {
