--- a/css/prism.css
+++ b/css/prism.css
@@ -44,9 +44,8 @@ code[class*="language-"]::selection, code[class*="language-"] ::selection {
 
 /* Code blocks */
 pre[class*="language-"] {
-	padding: 1em;
-	margin: .5em 0;
-	overflow: auto;
+	/*padding: 0.8em;*/
+	/*overflow: auto;*/
 }
 
 :not(pre) > code[class*="language-"],
@@ -56,8 +55,8 @@ pre[class*="language-"] {
 
 /* Inline code */
 :not(pre) > code[class*="language-"] {
-	padding: .1em;
-	border-radius: .3em;
+	/*padding: .1em;*/
+	/*border-radius: .3em;*/
 }
 
 .token.comment,
