--- a/css/theme.css
+++ b/css/theme.css
@@ -26,7 +26,7 @@ hr {
 
 code,
 pre {
-  padding: 0.1em 0.3em;
+  padding: 0.1em 0.4em;
 
   border-radius: 3px;
   background-color: var(--color-code);
@@ -36,9 +36,26 @@ pre {
 }
 
 code[class*="language-"] {
-  width: 100%;
-  overflow-x: auto;
   display: block;
+  overflow-x: auto;
+  padding: 0 24px 0 0;
+  width: 100%;
+}
+
+pre {
+  padding: 0.6em 0.8em;
+  position: relative;
+}
+
+pre::after {
+  bottom: 0;
+  content: " ";
+  position: absolute;
+  right: 0.8em;
+  top: 0;
+  width: 20px;
+
+  background-image: linear-gradient(to right, rgba(245,242,240,0), var(--color-code));
 }
 
 .wrapper {
